# CGCSG

./: CMakeLists.txt  README.md  SDLauxiliary.h  camera.h  examples.h  light.h  main.cpp  material.h  ray.h  scene.h
screenshots/: gallery.md
sdf/: common.h  ops.h  sdf.h  shapes.h  utils.h
